# Project-Magang-IRIS-OpenCV-Bola

./: CMakeLists.txt  README.md
src/: Bola1.cpp  Bola2.cpp
